minor fixes and bugs worked out

--- a/1.1_Surface_Lattice_basics.ipynb
+++ b/1.1_Surface_Lattice_basics.ipynb
@@ -16,18 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome to GENYSIS\n",
-      "('uploading file size:', 0.006, 'MB')\n",
-      "[====================================================]105%\n",
+      "uploading file size: 0.007 MB\n",
+      "[=====================================================]106%\n",
       "successfully uploaded models/surface1.stp as surface1.stp\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=surface1.stp&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=surface1.stp&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\n"
      ]
     },
     {
@@ -37,14 +36,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface1.stp&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface1.stp&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f93dcaa8ed0>"
+       "<IPython.lib.display.IFrame at 0x26c4cfaecc8>"
       ]
      },
      "metadata": {},
@@ -53,10 +52,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=surface1.stp&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=surface1.stp&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +63,7 @@
    "source": [
     "# install genysis library with: pip install genysis\n",
     "import genysis\n",
-    "t = \"REPLACE_WITH_YOUR_TOKEN\" # replace with your valid token\n",
+    "t = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\" # replace with your valid token\n",
     "\n",
     "# upload and visualize the base surface for the lattice\n",
     "genysis.upload(\"models/surface1.stp\",\"surface1.stp\",t) # a NURBS surface saved as .stp format\n",
@@ -73,16 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"surfaces\": \"surface1.stp\", \"div_U\": 10, \"div_V\": 10, \"t\": \"REPLACE_WITH_YOUR_TOKEN\", \"output\": \"temp.json\", \"height\": 2.5}')\n",
-      "('response: ', u'[\"temp.json\"]\\n')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=temp.json&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"surfaces\": \"surface1.stp\", \"div_U\": 10, \"div_V\": 10, \"output\": \"temp.json\", \"height\": 2.5, \"t\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\"}\n",
+      "response:  [\"temp.json\"]\n",
+      "\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=temp.json&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\n"
      ]
     },
     {
@@ -92,14 +92,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=temp.json&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=temp.json&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f93dca5e890>"
+       "<IPython.lib.display.IFrame at 0x26c4cf80588>"
       ]
      },
      "metadata": {},
@@ -108,10 +108,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=temp.json&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=temp.json&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,16 +128,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"case\": 2, \"cBendIn\": 0, \"chamfer\": 0, \"bendIn\": 0.5, \"centerChamfer\": 0, \"filename\": \"cell_0.obj\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\", \"connectPt\": 0}')\n",
-      "('response: ', u'[\"cell_0.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"case\": 2, \"chamfer\": 0, \"centerChamfer\": 0, \"bendIn\": 0.5, \"cBendIn\": 0, \"connectPt\": 0, \"filename\": \"cell_0.obj\", \"t\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\"}\n",
+      "response:  [\"cell_0.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\n"
      ]
     },
     {
@@ -147,14 +147,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f93dca5ed10>"
+       "<IPython.lib.display.IFrame at 0x26c4cf53708>"
       ]
      },
      "metadata": {},
@@ -163,10 +163,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,16 +181,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"EPSILON\": 0.01, \"component\": \"cell_0.obj\", \"filename\": \"surface_lattice_lines1.obj\", \"blendTargets\": [], \"boxes\": \"temp.json\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\"}')\n",
-      "('response: ', u'[\"surface_lattice_lines1.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines1.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"boxes\": \"temp.json\", \"component\": \"cell_0.obj\", \"filename\": \"surface_lattice_lines1.obj\", \"t\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\", \"blendTargets\": [], \"EPSILON\": 0.01}\n",
+      "response:  [\"surface_lattice_lines1.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines1.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\n"
      ]
     },
     {
@@ -200,14 +200,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines1.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines1.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f93dca5ecd0>"
+       "<IPython.lib.display.IFrame at 0x26c4bac0648>"
       ]
      },
      "metadata": {},
@@ -216,10 +216,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines1.obj&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines1.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -245,9 +245,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"memberThickness\": 0.2, \"lines\": \"surface_lattice_lines1.obj\", \"filename\": \"surface_lattice_meshed.obj\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\", \"preview\": true, \"resolution\": 300}')\n",
-      "('response: ', u'[\"surface_lattice_meshed.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_meshed.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"lines\": \"surface_lattice_lines1.obj\", \"resolution\": 300, \"memberThickness\": 0.2, \"filename\": \"surface_lattice_meshed.obj\", \"t\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\", \"preview\": true}\n",
+      "response:  [\"surface_lattice_meshed.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_meshed.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\n"
      ]
     },
     {
@@ -257,14 +257,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_meshed.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_meshed.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f93e109ac90>"
+       "<IPython.lib.display.IFrame at 0x26c4d5bf488>"
       ]
      },
      "metadata": {},
@@ -273,10 +273,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_meshed.obj&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_meshed.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6IndpbGRmZXVlci5wZXRlckBnbWFpbC5jb20ifQ.2Le6qK8N8klSzvFA1QyS8LR2JmVU3086vbLjkSR9Yp0'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,21 +307,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
