--- a/1.2_Surface_Lattice_attractors.ipynb
+++ b/1.2_Surface_Lattice_attractors.ipynb
@@ -16,20 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome to GENYSIS\n",
-      "('uploading file size:', 0.006, 'MB')\n",
+      "uploading file size: 0.007 MB\n",
       "[====================================================]105%\n",
       "successfully uploaded models/surface1.stp as surface1.stp\n",
-      "('request: ', '{\"surfaces\": \"surface1.stp\", \"div_U\": 10, \"div_V\": 10, \"t\": \"REPLACE_WITH_YOUR_TOKEN\", \"output\": \"temp.json\", \"height\": 2.5}')\n",
-      "('response: ', u'[\"temp.json\"]\\n')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=temp.json&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"surfaces\": \"surface1.stp\", \"div_U\": 10, \"div_V\": 10, \"div_W\": 4, \"output\": \"temp.json\", \"height\": 12, \"t\": \"Space0ut!\"}\n",
+      "response:  [\"temp.json\"]\n",
+      "\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=temp.json&t=Space0ut!\n"
      ]
     },
     {
@@ -39,14 +39,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=temp.json&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=temp.json&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fefe9aaa350>"
+       "<IPython.lib.display.IFrame at 0x2de19fdda88>"
       ]
      },
      "metadata": {},
@@ -55,10 +55,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=temp.json&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=temp.json&t=Space0ut!'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
    "source": [
     "# install genysis library with: pip install genysis\n",
     "import genysis\n",
-    "t = \"REPLACE_WITH_YOUR_TOKEN\" # replace with your valid token\n",
+    "t = \"Space0ut!\" # replace with your valid token\n",
     "\n",
     "# upload and visualize the base surface for the lattice\n",
     "genysis.upload(\"models/surface1.stp\",\"surface1.stp\",t) # a NURBS surface saved as .stp format\n",
@@ -74,8 +74,8 @@
     "# generate surface grid\n",
     "sl = genysis.surfaceLattice()\n",
     "sl.setSurfaces(\"surface1.stp\") # set input surface\n",
-    "sl.setDivision(u=10,v=10) # set UV division for the grid\n",
-    "sl.setHeight(2.5) # set the cell height for the grid\n",
+    "sl.setDivision(u=10,v=10) # set UV division for the grid, add a w component to create multiple levels\n",
+    "sl.setHeight(12) # set the cell height for the grid\n",
     "sl.genGrid(t) # generate the grid\n",
     "\n",
     "genysis.visualize(sl.gridOutput,t,True) # visualize the grid"
@@ -83,16 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"case\": 2, \"cBendIn\": 0, \"chamfer\": 0, \"bendIn\": 0.5, \"centerChamfer\": 0, \"filename\": \"cell_0.obj\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\", \"connectPt\": 0}')\n",
-      "('response: ', u'[\"cell_0.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"case\": 2, \"chamfer\": 0, \"centerChamfer\": 0, \"bendIn\": 0.5, \"cBendIn\": 0, \"connectPt\": 0, \"filename\": \"cell_0.obj\", \"t\": \"Space0ut!\"}\n",
+      "response:  [\"cell_0.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -102,14 +102,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fefe48f0ed0>"
+       "<IPython.lib.display.IFrame at 0x2de19fa2088>"
       ]
      },
      "metadata": {},
@@ -119,9 +119,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"case\": 2, \"cBendIn\": 0, \"chamfer\": 0, \"bendIn\": 0, \"centerChamfer\": 0, \"filename\": \"cell_1.obj\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\", \"connectPt\": 0}')\n",
-      "('response: ', u'[\"cell_1.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=cell_1.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"case\": 2, \"chamfer\": 0, \"centerChamfer\": 0, \"bendIn\": 0, \"cBendIn\": 0, \"connectPt\": 0, \"filename\": \"cell_1.obj\", \"t\": \"Space0ut!\"}\n",
+      "response:  [\"cell_1.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=cell_1.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -131,14 +131,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=cell_1.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=cell_1.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fefe495dd10>"
+       "<IPython.lib.display.IFrame at 0x2de1a68cf88>"
       ]
      },
      "metadata": {},
@@ -147,10 +147,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=cell_1.obj&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=cell_1.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,16 +167,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"EPSILON\": 0.01, \"component\": \"cell_1.obj\", \"filename\": \"surface_lattice_lines1.obj\", \"blendTargets\": [{\"attractor\": {\"range\": 15, \"point\": [10, 12, 0]}, \"component\": \"cell_0.obj\"}], \"boxes\": \"temp.json\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\"}')\n",
-      "('response: ', u'[\"surface_lattice_lines1.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines1.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"boxes\": \"temp.json\", \"component\": \"cell_1.obj\", \"filename\": \"surface_lattice_lines1.obj\", \"t\": \"Space0ut!\", \"blendTargets\": [{\"component\": \"cell_0.obj\", \"attractor\": {\"point\": [10, 12, 0], \"range\": 15}}], \"EPSILON\": 0.01}\n",
+      "response:  [\"surface_lattice_lines1.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines1.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -186,14 +186,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines1.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines1.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fefe8f3cc90>"
+       "<IPython.lib.display.IFrame at 0x2de1a61f508>"
       ]
      },
      "metadata": {},
@@ -202,10 +202,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines1.obj&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines1.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,16 +231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"EPSILON\": 0.01, \"component\": \"cell_1.obj\", \"filename\": \"surface_lattice_lines2.obj\", \"blendTargets\": [{\"attractor\": {\"range\": 15, \"plane\": [0, 1, 0, 0]}, \"component\": \"cell_0.obj\"}], \"boxes\": \"temp.json\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\"}')\n",
-      "('response: ', u'[\"surface_lattice_lines2.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines2.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"boxes\": \"temp.json\", \"component\": \"cell_1.obj\", \"filename\": \"surface_lattice_lines2.obj\", \"t\": \"Space0ut!\", \"blendTargets\": [{\"component\": \"cell_0.obj\", \"attractor\": {\"plane\": [0, 1, 0, 0], \"range\": 15}}], \"EPSILON\": 0.01}\n",
+      "response:  [\"surface_lattice_lines2.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines2.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -250,14 +250,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines2.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines2.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fefe495dd10>"
+       "<IPython.lib.display.IFrame at 0x2de17fff088>"
       ]
      },
      "metadata": {},
@@ -266,10 +266,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines2.obj&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines2.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,16 +295,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"EPSILON\": 0.01, \"component\": \"cell_1.obj\", \"filename\": \"surface_lattice_lines3.obj\", \"blendTargets\": [{\"attractor\": {\"range\": 8, \"curve\": [[0, 0, 0], [5, 6, 3], [24, 28, -4]]}, \"component\": \"cell_0.obj\"}], \"boxes\": \"temp.json\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\"}')\n",
-      "('response: ', u'[\"surface_lattice_lines3.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines3.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"boxes\": \"temp.json\", \"component\": \"cell_1.obj\", \"filename\": \"surface_lattice_lines3.obj\", \"t\": \"Space0ut!\", \"blendTargets\": [{\"component\": \"cell_0.obj\", \"attractor\": {\"curve\": [[0, 0, 0], [5, 6, 3], [24, 28, -4]], \"range\": 8}}], \"EPSILON\": 0.01}\n",
+      "response:  [\"surface_lattice_lines3.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines3.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -314,14 +314,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines3.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines3.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fefe535b650>"
+       "<IPython.lib.display.IFrame at 0x2de19fa2348>"
       ]
      },
      "metadata": {},
@@ -330,10 +330,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines3.obj&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines3.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,16 +359,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"EPSILON\": 0.01, \"component\": \"cell_1.obj\", \"filename\": \"surface_lattice_lines4.obj\", \"blendTargets\": [{\"attractor\": {\"range\": 5, \"curve\": [[0, 0, 0], [5, 6, 3], [24, 28, -4]]}, \"component\": \"cell_0.obj\"}, {\"attractor\": {\"range\": 15, \"point\": [24, 2, 0]}, \"component\": \"cell_0.obj\"}], \"boxes\": \"temp.json\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\"}')\n",
-      "('response: ', u'[\"surface_lattice_lines4.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines4.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"boxes\": \"temp.json\", \"component\": \"cell_1.obj\", \"filename\": \"surface_lattice_lines4.obj\", \"t\": \"Space0ut!\", \"blendTargets\": [{\"component\": \"cell_0.obj\", \"attractor\": {\"curve\": [[0, 0, 0], [5, 6, 3], [24, 28, -4]], \"range\": 5}}, {\"component\": \"cell_0.obj\", \"attractor\": {\"point\": [24, 2, 0], \"range\": 15}}], \"EPSILON\": 0.01}\n",
+      "response:  [\"surface_lattice_lines4.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines4.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -378,14 +378,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines4.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines4.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fefe48f0610>"
+       "<IPython.lib.display.IFrame at 0x2de19fe1e88>"
       ]
      },
      "metadata": {},
@@ -394,10 +394,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines4.obj&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_lines4.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -439,9 +439,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"memberThickness\": 0.2, \"lines\": \"surface_lattice_lines4.obj\", \"filename\": \"surface_lattice_meshed_attractor.obj\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\", \"preview\": true, \"resolution\": 300}')\n",
-      "('response: ', u'[\"surface_lattice_meshed_attractor.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_meshed_attractor.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"lines\": \"surface_lattice_lines4.obj\", \"resolution\": 300, \"memberThickness\": 0.2, \"filename\": \"surface_lattice_meshed_attractor.obj\", \"t\": \"Space0ut!\", \"preview\": true}\n",
+      "response:  [\"surface_lattice_meshed_attractor.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_meshed_attractor.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -451,14 +451,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_meshed_attractor.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_meshed_attractor.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fefe48f0b90>"
+       "<IPython.lib.display.IFrame at 0x2de1a609c48>"
       ]
      },
      "metadata": {},
@@ -467,10 +467,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_meshed_attractor.obj&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=surface_lattice_meshed_attractor.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,21 +500,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
