--- a/10_Conformal_Lattice_implicit_unit.ipynb
+++ b/10_Conformal_Lattice_implicit_unit.ipynb
@@ -18,33 +18,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import genysis \n",
-    "token = \"REPLACE_WITH_YOUR_TOKEN\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('uploading file size:', 0.006, 'MB')\n",
+      "Welcome to GENYSIS\n"
+     ]
+    }
+   ],
+   "source": [
+    "import genysis \n",
+    "token = \"Space0ut!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uploading file size: 0.007 MB\n",
       "[====================================================]105%\n",
       "successfully uploaded models/top.stp as top.stp\n",
-      "('uploading file size:', 0.006, 'MB')\n",
+      "uploading file size: 0.006 MB\n",
       "[====================================================]105%\n",
       "successfully uploaded models/bottom.stp as bottom.stp\n",
-      "('uploading file size:', 0.006, 'MB')\n",
+      "uploading file size: 0.007 MB\n",
       "[====================================================]105%\n",
       "successfully uploaded models/side1.stp as side1.stp\n",
-      "('uploading file size:', 0.006, 'MB')\n",
+      "uploading file size: 0.006 MB\n",
       "[====================================================]105%\n",
       "successfully uploaded models/side2.stp as side2.stp\n"
      ]
@@ -52,10 +60,10 @@
     {
      "data": {
       "text/plain": [
-       "{u'message': u'side2.stp uploaded to test@test.com/side2.stp'}"
+       "{'message': 'side2.stp uploaded to public/side2.stp'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,16 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"bottom\": \"bottom.stp\", \"top\": \"top.stp\", \"filename\": \"6x6x6_grid.json\", \"u\": 6, \"t\": \"REPLACE_WITH_YOUR_TOKEN\", \"w\": 6, \"v\": 6, \"output\": \"6x6x6_grid.json\", \"side2\": \"side2.stp\", \"side1\": \"side1.stp\"}')\n",
-      "('response: ', u'[\"6x6x6_grid.json\"]\\n')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=6x6x6_grid.json&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"u\": 6, \"v\": 6, \"w\": 6, \"top\": \"top.stp\", \"bottom\": \"bottom.stp\", \"side1\": \"side1.stp\", \"side2\": \"side2.stp\", \"filename\": \"6x6x6_grid.json\", \"merges\": [], \"t\": \"Space0ut!\", \"output\": \"6x6x6_grid.json\"}\n",
+      "response:  [\"6x6x6_grid.json\"]\n",
+      "\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=6x6x6_grid.json&t=Space0ut!\n"
      ]
     },
     {
@@ -90,14 +99,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=6x6x6_grid.json&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=6x6x6_grid.json&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f55c54766d0>"
+       "<IPython.lib.display.IFrame at 0x25681036f88>"
       ]
      },
      "metadata": {},
@@ -106,10 +115,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=6x6x6_grid.json&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=6x6x6_grid.json&t=Space0ut!'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,16 +135,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"function\": \"0.6-(math.cos((x-0.5)*2*math.pi)+math.cos((y-0.5)*2*math.pi)+math.cos((z-0.5)*2*math.pi))\", \"output\": \"implicit1.stl\", \"grid\": \"6x6x6_grid.json\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\"}')\n",
-      "('response: ', u'\"implicit1.stl\"\\n')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=implicit1.stl&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"grid\": \"6x6x6_grid.json\", \"output\": \"implicit1.stl\", \"function\": \"0.6-(math.cos((x-0.5)*2*math.pi)+math.cos((y-0.5)*2*math.pi)+math.cos((z-0.5)*2*math.pi))\", \"t\": \"Space0ut!\"}\n",
+      "response:  \"implicit1.stl\"\n",
+      "\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=implicit1.stl&t=Space0ut!\n"
      ]
     },
     {
@@ -145,14 +155,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=implicit1.stl&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=implicit1.stl&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f55c5476d50>"
+       "<IPython.lib.display.IFrame at 0x25680a78ac8>"
       ]
      },
      "metadata": {},
@@ -161,10 +171,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=implicit1.stl&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=implicit1.stl&t=Space0ut!'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -199,9 +209,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"function\": \"math.sqrt(x**2+y**2+z**2)-1\", \"grid\": \"6x6x6_grid.json\", \"smooth\": 5, \"t\": \"REPLACE_WITH_YOUR_TOKEN\", \"output\": \"implicit2.stl\"}')\n",
-      "('response: ', u'\"implicit2.stl\"\\n')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=implicit2.stl&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"grid\": \"6x6x6_grid.json\", \"output\": \"implicit2.stl\", \"function\": \"math.sqrt(x**2+y**2+z**2)-1\", \"smooth\": 5, \"t\": \"Space0ut!\"}\n",
+      "response:  \"implicit2.stl\"\n",
+      "\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=implicit2.stl&t=Space0ut!\n"
      ]
     },
     {
@@ -211,14 +222,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=implicit2.stl&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=implicit2.stl&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f55c5476790>"
+       "<IPython.lib.display.IFrame at 0x25681090ec8>"
       ]
      },
      "metadata": {},
@@ -227,10 +238,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=implicit2.stl&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=implicit2.stl&t=Space0ut!'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,25 +258,32 @@
     ")\n",
     "genysis.visualize('implicit2.stl',token,True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
