--- a/11.1_FEA.ipynb
+++ b/11.1_FEA.ipynb
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import genysis\n",
-    "token = \"REPLACE_WITH_YOUR_TOKEN\""
+    "token = \"Space0ut!\""
    ]
   },
   {
@@ -29,17 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('uploading file size:', 0.0, 'MB')\n",
-      "[==============================================================================================================================================]284%\n",
+      "uploading file size: 0.0 MB\n",
+      "[==========================================================================================================================================]277%\n",
       "successfully uploaded models/bar.obj as bar.obj\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=bar.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=bar.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -49,14 +49,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=bar.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=bar.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f1b08509290>"
+       "<IPython.lib.display.IFrame at 0x2abc3854e08>"
       ]
      },
      "metadata": {},
@@ -65,10 +65,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=bar.obj&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=bar.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,15 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"input\": [\"bar.obj\"], \"setting\": {\"load_conditions\": [{\"load\": {\"y\": 0, \"x\": 0, \"z\": 10}, \"type\": \"cload\", \"condition\": \"x <= 10\"}], \"remesh\": {\"detail\": \"low\", \"fast\": false}, \"material\": {\"elastic_modulus\": 100, \"poisson_ratio\": 0.4}, \"output\": \"bar\", \"input\": \"bar.obj\", \"support_conditions\": [{\"condition\": \"x >= 90\", \"axis\": {\"y\": true, \"x\": true, \"z\": true}}]}, \"t\": \"REPLACE_WITH_YOUR_TOKEN\", \"output\": \"bar\"}')\n",
-      "('response: ', u'[\"bar.inp\",\"bar.frd\"]\\n')\n",
+      "request:  {\"input\": [\"bar.obj\"], \"output\": \"bar\", \"setting\": {\"load_conditions\": [{\"type\": \"cload\", \"load\": {\"x\": 0, \"y\": 0, \"z\": 10}, \"condition\": \"x <= 10\"}], \"support_conditions\": [{\"axis\": {\"x\": true, \"y\": true, \"z\": true}, \"condition\": \"x >= 90\"}], \"material\": {\"elastic_modulus\": 100, \"poisson_ratio\": 0.4}, \"remesh\": {\"detail\": \"low\", \"fast\": false}, \"input\": \"bar.obj\", \"output\": \"bar\"}, \"t\": \"Space0ut!\"}\n",
+      "response:  [\"bar.inp\",\"bar.frd\"]\n",
+      "\n",
       "Downloading bar.frd as models/bar.frd\n",
       "[==================================================]100%\n",
       "successfully downloaded to models/bar.frd\n"
@@ -167,23 +168,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('uploading file size:', 1.969, 'MB')\n",
+      "uploading file size: 1.969 MB\n",
       "[==================================================]100%\n",
       "successfully uploaded models/lattice_x.obj as lattice_x.obj\n",
-      "('uploading file size:', 0.0, 'MB')\n",
-      "[================================================================================================================]224%\n",
+      "uploading file size: 0.0 MB\n",
+      "[=============================================================================================================]219%\n",
       "successfully uploaded models/load.obj as load.obj\n",
-      "('uploading file size:', 0.0, 'MB')\n",
-      "[==============================================================================================================]221%\n",
+      "uploading file size: 0.0 MB\n",
+      "[============================================================================================================]216%\n",
       "successfully uploaded models/support.obj as support.obj\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=lattice_x.obj,load.obj,support.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=lattice_x.obj,load.obj,support.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -193,14 +194,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=lattice_x.obj,load.obj,support.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=lattice_x.obj,load.obj,support.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f1b082f8d50>"
+       "<IPython.lib.display.IFrame at 0x2abc3886e48>"
       ]
      },
      "metadata": {},
@@ -209,10 +210,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=lattice_x.obj,load.obj,support.obj&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=lattice_x.obj,load.obj,support.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,15 +228,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"input\": [\"lattice_x.obj\", \"load.obj\", \"support.obj\"], \"setting\": {\"load_conditions\": [{\"load\": {\"y\": 5, \"x\": 5, \"z\": 0}, \"type\": \"cload\", \"condition\": {\"file\": \"load.obj\"}}], \"remesh\": {\"detail\": \"normal\", \"fast\": false}, \"material\": {\"elastic_modulus\": 100, \"poisson_ratio\": 0.4}, \"output\": \"lattice_x\", \"input\": \"lattice_x.obj\", \"support_conditions\": [{\"condition\": {\"file\": \"support.obj\"}, \"axis\": {\"y\": true, \"x\": true, \"z\": true}}]}, \"t\": \"REPLACE_WITH_YOUR_TOKEN\", \"output\": \"lattice_x\"}')\n",
-      "('response: ', u'[\"lattice_x.inp\",\"lattice_x.frd\"]\\n')\n",
+      "request:  {\"input\": [\"lattice_x.obj\", \"load.obj\", \"support.obj\"], \"output\": \"lattice_x\", \"setting\": {\"load_conditions\": [{\"type\": \"cload\", \"load\": {\"x\": 5, \"y\": 5, \"z\": 0}, \"condition\": {\"file\": \"load.obj\"}}], \"support_conditions\": [{\"axis\": {\"x\": true, \"y\": true, \"z\": true}, \"condition\": {\"file\": \"support.obj\"}}], \"material\": {\"elastic_modulus\": 100, \"poisson_ratio\": 0.4}, \"remesh\": {\"detail\": \"normal\", \"fast\": false}, \"input\": \"lattice_x.obj\", \"output\": \"lattice_x\"}, \"t\": \"Space0ut!\"}\n",
+      "response:  [\"lattice_x.inp\",\"lattice_x.frd\"]\n",
+      "\n",
       "Downloading lattice_x.frd as models/lattice_x.frd\n",
       "[==================================================]100%\n",
       "successfully downloaded to models/lattice_x.frd\n"
@@ -279,21 +281,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
