--- a/11.2_FEA_lattice_band_example.ipynb
+++ b/11.2_FEA_lattice_band_example.ipynb
@@ -32,31 +32,31 @@
    ],
    "source": [
     "import genysis\n",
-    "token = \"REPLACE_WITH_YOUR_TOKEN\""
+    "token = \"Space0ut!\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('uploading file size:', 0.005, 'MB')\n",
-      "[=====================================================]107%\n",
+      "uploading file size: 0.005 MB\n",
+      "[=====================================================]106%\n",
       "successfully uploaded models/band.stp as band.stp\n",
-      "('uploading file size:', 0.0, 'MB')\n",
-      "[===========================================================================]150%\n",
+      "uploading file size: 0.0 MB\n",
+      "[==========================================================================]148%\n",
       "successfully uploaded models/mid_load.obj as mid_load.obj\n",
-      "('uploading file size:', 0.0, 'MB')\n",
-      "[==========================================================================]149%\n",
+      "uploading file size: 0.0 MB\n",
+      "[=========================================================================]147%\n",
       "successfully uploaded models/support1.obj as support1.obj\n",
-      "('uploading file size:', 0.0, 'MB')\n",
-      "[==========================================================================]149%\n",
+      "uploading file size: 0.0 MB\n",
+      "[==========================================================================]148%\n",
       "successfully uploaded models/support2.obj as support2.obj\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=band.stp,mid_load.obj,support1.obj,support2.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=band.stp,mid_load.obj,support1.obj,support2.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -66,14 +66,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=band.stp,mid_load.obj,support1.obj,support2.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=band.stp,mid_load.obj,support1.obj,support2.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f407dde6e90>"
+       "<IPython.lib.display.IFrame at 0x1b64135f648>"
       ]
      },
      "metadata": {},
@@ -82,10 +82,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=band.stp,mid_load.obj,support1.obj,support2.obj&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=band.stp,mid_load.obj,support1.obj,support2.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,20 +101,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"surfaces\": \"band.stp\", \"div_U\": 15, \"div_W\": 1, \"height\": 5, \"t\": \"REPLACE_WITH_YOUR_TOKEN\", \"output\": \"temp.json\", \"div_V\": 2}')\n",
-      "('response: ', u'[\"temp.json\"]\\n')\n",
-      "('request: ', '{\"case\": 2, \"cBendIn\": 0, \"chamfer\": 0, \"bendIn\": 0.5, \"centerChamfer\": 0, \"filename\": \"cell_0.obj\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\", \"connectPt\": 0}')\n",
-      "('response: ', u'[\"cell_0.obj\"]')\n",
-      "('request: ', '{\"EPSILON\": 0.01, \"component\": \"cell_0.obj\", \"filename\": \"lattice_lines.obj\", \"blendTargets\": [], \"boxes\": \"temp.json\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\"}')\n",
-      "('response: ', u'[\"lattice_lines.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=lattice_lines.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"surfaces\": \"band.stp\", \"div_U\": 15, \"div_V\": 2, \"div_W\": 1, \"output\": \"temp.json\", \"height\": 5, \"t\": \"Space0ut!\"}\n",
+      "response:  [\"temp.json\"]\n",
+      "\n",
+      "request:  {\"case\": 2, \"chamfer\": 0, \"centerChamfer\": 0, \"bendIn\": 0.5, \"cBendIn\": 0, \"connectPt\": 0, \"filename\": \"cell_0.obj\", \"t\": \"Space0ut!\"}\n",
+      "response:  [\"cell_0.obj\"]\n",
+      "request:  {\"boxes\": \"temp.json\", \"component\": \"cell_0.obj\", \"filename\": \"lattice_lines.obj\", \"t\": \"Space0ut!\", \"blendTargets\": [], \"EPSILON\": 0.01}\n",
+      "response:  [\"lattice_lines.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=lattice_lines.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -124,14 +125,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=lattice_lines.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=lattice_lines.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f407d50d150>"
+       "<IPython.lib.display.IFrame at 0x1b64337a708>"
       ]
      },
      "metadata": {},
@@ -140,10 +141,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=lattice_lines.obj&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=lattice_lines.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,16 +165,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"resolution\": 400, \"memberThickness\": 0.6, \"lines\": \"lattice_lines.obj\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\", \"filename\": \"lattice_band.stl\"}')\n",
-      "('response: ', u'[\"lattice_band.stl\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=lattice_band.stl&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"lines\": \"lattice_lines.obj\", \"resolution\": 400, \"memberThickness\": 0.6, \"filename\": \"lattice_band.stl\", \"t\": \"Space0ut!\"}\n",
+      "response:  [\"lattice_band.stl\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=lattice_band.stl&t=Space0ut!\n"
      ]
     },
     {
@@ -183,14 +184,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=lattice_band.stl&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=lattice_band.stl&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f407e7d0e90>"
+       "<IPython.lib.display.IFrame at 0x1b6439530c8>"
       ]
      },
      "metadata": {},
@@ -199,10 +200,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=lattice_band.stl&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=lattice_band.stl&t=Space0ut!'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,15 +223,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"input\": [\"lattice_band.stl\", \"mid_load.obj\", \"support1.obj\", \"support2.obj\"], \"setting\": {\"load_conditions\": [{\"load\": {\"y\": 0, \"x\": 0, \"z\": -10}, \"type\": \"cload\", \"condition\": {\"file\": \"mid_load.obj\"}}], \"remesh\": {\"detail\": \"normal\", \"fast\": false}, \"material\": {\"elastic_modulus\": 100, \"poisson_ratio\": 0.4}, \"output\": \"lattice_band\", \"input\": \"lattice_band.stl\", \"support_conditions\": [{\"condition\": {\"file\": \"support1.obj\"}, \"axis\": {\"y\": true, \"x\": true, \"z\": true}}, {\"condition\": {\"file\": \"support2.obj\"}, \"axis\": {\"y\": true, \"x\": true, \"z\": true}}]}, \"t\": \"REPLACE_WITH_YOUR_TOKEN\", \"output\": \"lattice_band\"}')\n",
-      "('response: ', u'[\"lattice_band.inp\",\"lattice_band.frd\"]\\n')\n",
+      "request:  {\"input\": [\"lattice_band.stl\", \"mid_load.obj\", \"support1.obj\", \"support2.obj\"], \"output\": \"lattice_band\", \"setting\": {\"load_conditions\": [{\"type\": \"cload\", \"load\": {\"x\": 0, \"y\": 0, \"z\": -10}, \"condition\": {\"file\": \"mid_load.obj\"}}], \"support_conditions\": [{\"axis\": {\"x\": true, \"y\": true, \"z\": true}, \"condition\": {\"file\": \"support1.obj\"}}, {\"axis\": {\"x\": true, \"y\": true, \"z\": true}, \"condition\": {\"file\": \"support2.obj\"}}], \"material\": {\"elastic_modulus\": 100, \"poisson_ratio\": 0.4}, \"remesh\": {\"detail\": \"normal\", \"fast\": false}, \"input\": \"lattice_band.stl\", \"output\": \"lattice_band\"}, \"t\": \"Space0ut!\"}\n",
+      "response:  [\"lattice_band.inp\",\"lattice_band.frd\"]\n",
+      "\n",
       "Downloading lattice_band.frd as models/lattice_band.frd\n",
       "[==================================================]100%\n",
       "successfully downloaded to models/lattice_band.frd\n"
@@ -309,21 +311,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
