--- a/2_Surface_Lattice_custom-unit.ipynb
+++ b/2_Surface_Lattice_custom-unit.ipynb
@@ -16,45 +16,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to GENYSIS\n",
-      "('uploading file size:', 0.004, 'MB')\n",
-      "[======================================================]108%\n",
-      "successfully uploaded models/surface_10by10.obj as surface_10by10.obj\n",
-      "('uploading file size:', 0.071, 'MB')\n",
-      "[==================================================]100%\n",
-      "successfully uploaded models/chain_unit.obj as chain_unit.obj\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{u'message': u'chain_unit.obj uploaded to test@test.com/chain_unit.obj'}"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# install genysis library with: pip install genysis\n",
-    "import genysis\n",
-    "token = \"eyJhbGciOiJIU.U892JiUy\" # replace with your valid token\n",
-    "\n",
-    "# upload files to be used in this demo\n",
-    "genysis.upload(\"models/surface_10by10.obj\",\"surface_10by10.obj\",token)\n",
-    "genysis.upload(\"models/chain_unit.obj\",\"chain_unit.obj\",token)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -62,33 +23,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://studiobitonti.appspot.com/apps/visualize?name=chain_unit.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "uploading file size: 0.004 MB\n",
+      "[======================================================]108%\n",
+      "successfully uploaded models/surface_10by10.obj as surface_10by10.obj\n",
+      "uploading file size: 0.071 MB\n",
+      "[==================================================]100%\n",
+      "successfully uploaded models/chain_unit.obj as chain_unit.obj\n"
      ]
     },
     {
      "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"300\"\n",
-       "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=chain_unit.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f02fa9ed910>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=chain_unit.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "{'message': 'chain_unit.obj uploaded to public/chain_unit.obj'}"
       ]
      },
      "execution_count": 2,
@@ -97,8 +43,13 @@
     }
    ],
    "source": [
-    "# use custom-made obj file as unit for lattice obj file \n",
-    "genysis.visualize(\"chain_unit.obj\",token,True,300,300)"
+    "# install genysis library with: pip install genysis\n",
+    "import genysis\n",
+    "token = \"Space0ut!\" # replace with your valid token\n",
+    "\n",
+    "# upload files to be used in this demo\n",
+    "genysis.upload(\"models/surface_10by10.obj\",\"surface_10by10.obj\",token)\n",
+    "genysis.upload(\"models/chain_unit.obj\",\"chain_unit.obj\",token)"
    ]
   },
   {
@@ -110,9 +61,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"autoScale\": false, \"EPSILON\": 0.01, \"component\": \"chain_unit.obj\", \"filename\": \"surfaceLattice_chainmail.obj\", \"blendTargets\": [], \"base\": \"surface_10by10.obj\", \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"ceil\": null, \"cellHeight\": 2}')\n",
-      "('response: ', u'[\"surfaceLattice_chainmail.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=surfaceLattice_chainmail.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=chain_unit.obj&t=Space0ut!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"300\"\n",
+       "            height=\"300\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=chain_unit.obj&t=Space0ut!\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x21654776608>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://studiobitonti.appspot.com/apps/visualize?name=chain_unit.obj&t=Space0ut!'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# use custom-made obj file as unit for lattice obj file \n",
+    "genysis.visualize(\"chain_unit.obj\",token,True,300,300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "request:  {\"surfaces\": [\"surface_10by10.obj\"], \"output\": \"temp.json\", \"height\": 2, \"t\": \"Space0ut!\"}\n",
+      "response:  [\"temp.json\"]\n",
+      "\n",
+      "request:  {\"boxes\": \"temp.json\", \"component\": \"chain_unit.obj\", \"filename\": \"surfaceLattice_chainmail.obj\", \"t\": \"Space0ut!\", \"blendTargets\": [], \"EPSILON\": 0.01}\n",
+      "response:  [\"surfaceLattice_chainmail.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=surfaceLattice_chainmail.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -122,14 +124,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surfaceLattice_chainmail.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surfaceLattice_chainmail.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f02df49e8d0>"
+       "<IPython.lib.display.IFrame at 0x216547947c8>"
       ]
      },
      "metadata": {},
@@ -138,10 +140,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=surfaceLattice_chainmail.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=surfaceLattice_chainmail.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,12 +153,13 @@
     "surfaceLattice = genysis.surfaceLattice()\n",
     "# by default the function auto scale the input unit to fix a 1x1x1 bounding box before arraying it to surface\n",
     "# set auto scale to False here to allow unit geometry exceed this range to create a chainmail-style lattice\n",
-    "surfaceLattice.setAutoScale(False) \n",
-    "surfaceLattice.setSurface(\"surface_10by10.obj\")\n",
-    "surfaceLattice.setCellHeight(2)\n",
+    "# surfaceLattice.setAutoScale(False) \n",
+    "surfaceLattice.setSurfaces([\"surface_10by10.obj\"])\n",
+    "surfaceLattice.setHeight(2)\n",
     "surfaceLattice.setComponent(\"chain_unit.obj\")\n",
     "surfaceLattice.setOutput(\"surfaceLattice_chainmail.obj\")\n",
-    "surfaceLattice.run(token)\n",
+    "surfaceLattice.genGrid(token)\n",
+    "surfaceLattice.populateLattice(token)\n",
     "genysis.visualize(\"surfaceLattice_chainmail.obj\",token,True)"
    ]
   },
@@ -182,21 +185,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
