--- a/3_Volume_Lattice_basics.ipynb
+++ b/3_Volume_Lattice_basics.ipynb
@@ -24,7 +24,7 @@
      "output_type": "stream",
      "text": [
       "Welcome to GENYSIS\n",
-      "('uploading file size:', 0.003, 'MB')\n",
+      "uploading file size: 0.003 MB\n",
       "[=======================================================]111%\n",
       "successfully uploaded models/cylinder.obj as cylinder.obj\n"
      ]
@@ -32,7 +32,7 @@
     {
      "data": {
       "text/plain": [
-       "{u'message': u'cylinder.obj uploaded to test@test.com/cylinder.obj'}"
+       "{'message': 'cylinder.obj uploaded to public/cylinder.obj'}"
       ]
      },
      "execution_count": 1,
@@ -43,7 +43,7 @@
    "source": [
     "# install genysis library with: pip install genysis\n",
     "import genysis\n",
-    "t = \"eyJhbGciOiJIU.U892JiUy\" # replace with your valid token\n",
+    "t = \"Space0ut!\" # replace with your valid token\n",
     "\n",
     "# upload files to be used in this demo\n",
     "genysis.upload(\"models/cylinder.obj\",\"cylinder.obj\",t)"
@@ -58,9 +58,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"case\": 3, \"cBendIn\": 0, \"chamfer\": 1, \"bendIn\": 0, \"centerChamfer\": 0, \"filename\": \"volume_cell_0.obj\", \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"connectPt\": 0}')\n",
-      "('response: ', u'[\"volume_cell_0.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=volume_cell_0.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "request:  {\"case\": 3, \"chamfer\": 1, \"centerChamfer\": 0, \"bendIn\": 0, \"cBendIn\": 0, \"connectPt\": 0, \"filename\": \"volume_cell_0.obj\", \"t\": \"Space0ut!\"}\n",
+      "response:  [\"volume_cell_0.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=volume_cell_0.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -70,14 +70,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=volume_cell_0.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=volume_cell_0.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f75beb5d090>"
+       "<IPython.lib.display.IFrame at 0x1ee7fdd6d88>"
       ]
      },
      "metadata": {},
@@ -86,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=volume_cell_0.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=volume_cell_0.obj&t=Space0ut!'"
       ]
      },
      "execution_count": 2,
@@ -111,9 +111,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"component\": \"volume_cell_0.obj\", \"componentSize\": 3, \"volume\": \"cylinder.obj\", \"blendTargets\": [], \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"filename\": \"volumeLattice_lines1.obj\"}')\n",
-      "('response: ', u'[\"volumeLattice_lines1.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=volumeLattice_lines1.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "request:  {\"component\": \"volume_cell_0.obj\", \"volume\": \"cylinder.obj\", \"componentSize\": 3, \"filename\": \"volumeLattice_lines1.obj\", \"t\": \"Space0ut!\", \"blendTargets\": []}\n",
+      "response:  [\"volumeLattice_lines1.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=volumeLattice_lines1.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -123,14 +123,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=volumeLattice_lines1.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=volumeLattice_lines1.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f75beb5d050>"
+       "<IPython.lib.display.IFrame at 0x1ee7fdb5f88>"
       ]
      },
      "metadata": {},
@@ -139,7 +139,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=volumeLattice_lines1.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=volumeLattice_lines1.obj&t=Space0ut!'"
       ]
      },
      "execution_count": 3,
@@ -167,9 +167,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"case\": 3, \"cBendIn\": 0, \"chamfer\": 0, \"bendIn\": 0, \"centerChamfer\": 0, \"filename\": \"volume_cell_1.obj\", \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"connectPt\": 0}')\n",
-      "('response: ', u'[\"volume_cell_1.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=volume_cell_1.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "request:  {\"case\": 3, \"chamfer\": 0, \"centerChamfer\": 0, \"bendIn\": 0, \"cBendIn\": 0, \"connectPt\": 0, \"filename\": \"volume_cell_1.obj\", \"t\": \"Space0ut!\"}\n",
+      "response:  [\"volume_cell_1.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=volume_cell_1.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -179,14 +179,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=volume_cell_1.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=volume_cell_1.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f75beb5dc90>"
+       "<IPython.lib.display.IFrame at 0x1ee7fdbf208>"
       ]
      },
      "metadata": {},
@@ -195,7 +195,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=volume_cell_1.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=volume_cell_1.obj&t=Space0ut!'"
       ]
      },
      "execution_count": 4,
@@ -219,9 +219,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"component\": \"volume_cell_0.obj\", \"componentSize\": 3, \"volume\": \"cylinder.obj\", \"blendTargets\": [{\"attractor\": {\"range\": 20, \"plane\": [0, 0, 1, 0]}, \"component\": \"volume_cell_1.obj\"}], \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"filename\": \"volumeLattice_lines2.obj\"}')\n",
-      "('response: ', u'[\"volumeLattice_lines2.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=volumeLattice_lines2.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "request:  {\"component\": \"volume_cell_0.obj\", \"volume\": \"cylinder.obj\", \"componentSize\": 3, \"filename\": \"volumeLattice_lines2.obj\", \"t\": \"Space0ut!\", \"blendTargets\": [{\"component\": \"volume_cell_1.obj\", \"attractor\": {\"plane\": [0, 0, 1, 0], \"range\": 20}}]}\n",
+      "response:  [\"volumeLattice_lines2.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=volumeLattice_lines2.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -231,14 +231,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=volumeLattice_lines2.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=volumeLattice_lines2.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f75cc08e410>"
+       "<IPython.lib.display.IFrame at 0x1ee7fde9448>"
       ]
      },
      "metadata": {},
@@ -247,7 +247,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=volumeLattice_lines2.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=volumeLattice_lines2.obj&t=Space0ut!'"
       ]
      },
      "execution_count": 5,
@@ -278,9 +278,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"memberThickness\": 0.2, \"lines\": \"volumeLattice_lines2.obj\", \"filename\": \"volumeLattice_meshed.obj\", \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"preview\": true, \"resolution\": 300}')\n",
-      "('response: ', u'[\"volumeLattice_meshed.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=volumeLattice_meshed.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "request:  {\"lines\": \"volumeLattice_lines2.obj\", \"resolution\": 300, \"memberThickness\": 0.2, \"filename\": \"volumeLattice_meshed.obj\", \"t\": \"Space0ut!\", \"preview\": true}\n",
+      "response:  [\"volumeLattice_meshed.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=volumeLattice_meshed.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -290,14 +290,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=volumeLattice_meshed.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=volumeLattice_meshed.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f75cc08e210>"
+       "<IPython.lib.display.IFrame at 0x1ee7fdc0948>"
       ]
      },
      "metadata": {},
@@ -306,7 +306,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=volumeLattice_meshed.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=volumeLattice_meshed.obj&t=Space0ut!'"
       ]
      },
      "execution_count": 6,
@@ -349,21 +349,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
