--- a/4_Stochastic_Lattice_hip-implant.ipynb
+++ b/4_Stochastic_Lattice_hip-implant.ipynb
@@ -16,28 +16,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import library and assign your token\n",
-    "import genysis\n",
-    "t = \"eyJhbGciOiJIU.U892JiUy\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('uploading file size:', 0.535, 'MB')\n",
+      "Welcome to GENYSIS\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import library and assign your token\n",
+    "import genysis\n",
+    "t = \"Space0ut!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uploading file size: 0.535 MB\n",
       "[==================================================]100%\n",
       "successfully uploaded models/bipolar_head1.obj as bipolar_head1.obj\n",
-      "('uploading file size:', 1.247, 'MB')\n",
+      "uploading file size: 1.287 MB\n",
       "[==================================================]100%\n",
       "successfully uploaded models/bipolar_head2.obj as bipolar_head2.obj\n"
      ]
@@ -45,10 +53,10 @@
     {
      "data": {
       "text/plain": [
-       "{u'message': u'bipolar_head2.obj uploaded to test@test.com/bipolar_head2.obj'}"
+       "{'message': 'bipolar_head2.obj uploaded to public/bipolar_head2.obj'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head1.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head1.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -78,14 +86,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head1.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head1.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fdd77e78390>"
+       "<IPython.lib.display.IFrame at 0x16e6b2e86c8>"
       ]
      },
      "metadata": {},
@@ -95,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head2.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head2.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -105,14 +113,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head2.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head2.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fdd77e78510>"
+       "<IPython.lib.display.IFrame at 0x16e6b2e8a48>"
       ]
      },
      "metadata": {},
@@ -121,10 +129,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head2.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head2.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,11 +152,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"input2\": \"bipolar_head2.obj\", \"engine\": \"carve\", \"input1\": \"bipolar_head1.obj\", \"t\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA\", \"output\": \"bipolar_head_lattice_region.obj\", \"operation\": \"intersection\"}')\n",
-      "('response: ', u'[\"bipolar_head_lattice_region.obj\"]')\n",
-      "('request: ', '{\"input2\": \"bipolar_head2.obj\", \"engine\": \"carve\", \"input1\": \"bipolar_head1.obj\", \"t\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA\", \"output\": \"bipolar_head_solid_region.obj\", \"operation\": \"difference\"}')\n",
-      "('response: ', u'[\"bipolar_head_solid_region.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_lattice_region.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA\n"
+      "request:  {\"input1\": \"bipolar_head1.obj\", \"input2\": \"bipolar_head2.obj\", \"operation\": \"intersection\", \"output\": \"bipolar_head_lattice_region.obj\", \"t\": \"Space0ut!\", \"engine\": \"carve\"}\n",
+      "response:  {\"output\":\"bipolar_head_lattice_region.obj\"}\n",
+      "\n",
+      "request:  {\"input1\": \"bipolar_head1.obj\", \"input2\": \"bipolar_head2.obj\", \"operation\": \"difference\", \"output\": \"bipolar_head_solid_region.obj\", \"t\": \"Space0ut!\", \"engine\": \"carve\"}\n",
+      "response:  {\"output\":\"bipolar_head_solid_region.obj\"}\n",
+      "\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_lattice_region.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -158,14 +168,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_lattice_region.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_lattice_region.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fa0370d4350>"
+       "<IPython.lib.display.IFrame at 0x16e6b3e0bc8>"
       ]
      },
      "metadata": {},
@@ -175,7 +185,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_solid_region.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_solid_region.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -185,14 +195,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_solid_region.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_solid_region.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fa025f69ed0>"
+       "<IPython.lib.display.IFrame at 0x16e6b3f2148>"
       ]
      },
      "metadata": {},
@@ -201,7 +211,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_solid_region.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_solid_region.obj&t=Space0ut!'"
       ]
      },
      "execution_count": 4,
@@ -240,16 +250,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"volume\": \"bipolar_head_lattice_region.obj\", \"poreSize\": 1.0, \"t\": \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA\", \"filename\": \"bipolar_head_lattice_lines.obj\"}')\n",
-      "('response: ', u'[\"bipolar_head_lattice_lines.obj\"]')\n",
+      "request:  {\"volume\": \"bipolar_head_lattice_region.obj\", \"poreSize\": 1.0, \"filename\": \"bipolar_head_lattice_lines.obj\", \"t\": \"Space0ut!\"}\n",
+      "response:  [\"bipolar_head_lattice_lines.obj\"]\n",
       "Click on URL to visualize\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_lattice_lines.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_lattice_lines.obj&t=Space0ut!\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_lattice_lines.obj&t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20ifQ.MnaG7TbLPkt-h5FIs2P6k-MRTBbJe7Kfty-VSa9WuWA'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=bipolar_head_lattice_lines.obj&t=Space0ut!'"
       ]
      },
      "execution_count": 5,
@@ -417,21 +427,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
