--- a/7_Use_Cases_generative_jewelry.ipynb
+++ b/7_Use_Cases_generative_jewelry.ipynb
@@ -16,17 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('uploading file size:', 0.494, 'MB')\n",
+      "Welcome to GENYSIS\n",
+      "uploading file size: 0.494 MB\n",
       "[==================================================]100%\n",
       "successfully uploaded models/ring.obj as ring.obj\n",
-      "('uploading file size:', 0.491, 'MB')\n",
+      "uploading file size: 0.491 MB\n",
       "[==================================================]100%\n",
       "successfully uploaded models/ring_twisted.obj as ring_twisted.obj\n"
      ]
@@ -34,17 +35,17 @@
     {
      "data": {
       "text/plain": [
-       "{u'message': u'ring_twisted.obj uploaded to test@test.com/ring_twisted.obj'}"
+       "{'message': 'ring_twisted.obj uploaded to public/ring_twisted.obj'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import genysis\n",
-    "t = \"eyJhbGciOiJIU.U892JiUy\" # replace with your valid token\n",
+    "t = \"Space0ut!\" # replace with your valid token\n",
     "\n",
     "# uploade required files to server\n",
     "genysis.upload(src = \"models/ring.obj\", dest = \"ring.obj\", token = t)\n",
@@ -53,14 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://studiobitonti.appspot.com/apps/visualize?name=ring.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=ring.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -70,14 +71,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=ring.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=ring.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f1620046890>"
+       "<IPython.lib.display.IFrame at 0x18ed64b4dc8>"
       ]
      },
      "metadata": {},
@@ -87,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://studiobitonti.appspot.com/apps/visualize?name=ring_twisted.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=ring_twisted.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -97,14 +98,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=ring_twisted.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=ring_twisted.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f1620046910>"
+       "<IPython.lib.display.IFrame at 0x18ed64fa508>"
       ]
      },
      "metadata": {},
@@ -113,10 +114,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=ring_twisted.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=ring_twisted.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,16 +129,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"compB\": \"ring_twisted.obj\", \"compA\": \"ring.obj\", \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"value\": 0.5, \"filename\": \"ring_blended_0.5.obj\"}')\n",
-      "('response: ', u'[\"ring_blended_0.5.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=ring_blended_0.5.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "request:  {\"compA\": \"ring.obj\", \"compB\": \"ring_twisted.obj\", \"value\": 0.5, \"filename\": \"ring_blended_0.5.obj\", \"t\": \"Space0ut!\"}\n",
+      "response:  [\"ring_blended_0.5.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=ring_blended_0.5.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -147,14 +148,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=ring_blended_0.5.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=ring_blended_0.5.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f1620033b50>"
+       "<IPython.lib.display.IFrame at 0x18ed6ad1fc8>"
       ]
      },
      "metadata": {},
@@ -163,10 +164,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=ring_blended_0.5.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=ring_blended_0.5.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,18 +187,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"input2\": \"ring_blended_0.5.obj\", \"engine\": \"voxel\", \"vxsize\": 0.05, \"input1\": \"ring.obj\", \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"output\": \"ring_midStep.obj\", \"operation\": \"union\"}')\n",
-      "('response: ', u'[\"ring_midStep.obj\"]\\n')\n",
-      "('request: ', '{\"input2\": \"ring_twisted.obj\", \"engine\": \"voxel\", \"vxsize\": 0.05, \"input1\": \"ring_midStep.obj\", \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"output\": \"ring_final.obj\", \"operation\": \"union\"}')\n",
-      "('response: ', u'[\"ring_final.obj\"]\\n')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=ring_final.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "request:  {\"input1\": \"ring.obj\", \"input2\": \"ring_blended_0.5.obj\", \"operation\": \"union\", \"output\": \"ring_midStep.obj\", \"t\": \"Space0ut!\", \"engine\": \"voxel\", \"vxsize\": 0.05}\n",
+      "response:  {\"output\":[\"ring_midStep.obj\"]}\n",
+      "\n",
+      "request:  {\"input1\": \"ring_midStep.obj\", \"input2\": \"ring_twisted.obj\", \"operation\": \"union\", \"output\": \"ring_final.obj\", \"t\": \"Space0ut!\", \"engine\": \"voxel\", \"vxsize\": 0.05}\n",
+      "response:  {\"output\":[\"ring_final.obj\"]}\n",
+      "\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=ring_final.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -207,14 +210,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=ring_final.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=ring_final.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f1620033950>"
+       "<IPython.lib.display.IFrame at 0x18ed6ade388>"
       ]
      },
      "metadata": {},
@@ -223,10 +226,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=ring_final.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=ring_final.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,21 +273,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
