--- a/8_Use_Cases_sports_eyewear.ipynb
+++ b/8_Use_Cases_sports_eyewear.ipynb
@@ -28,7 +28,7 @@
    ],
    "source": [
     "import genysis\n",
-    "t = \"eyJhbGciOiJIU.U892JiUy\" # replace with your valid token"
+    "t = \"Space0ut!\" # replace with your valid token"
    ]
   },
   {
@@ -40,13 +40,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('uploading file size:', 2.298, 'MB')\n",
+      "uploading file size: 2.298 MB\n",
       "[==================================================]100%\n",
       "successfully uploaded models/face_scan.obj as face_scan.obj\n",
-      "('uploading file size:', 0.065, 'MB')\n",
-      "[==================================================]100%\n",
+      "uploading file size: 0.0 MB\n",
+      "[============================================================================================================]216%\n",
       "successfully uploaded models/support.obj as support.obj\n",
-      "('uploading file size:', 0.562, 'MB')\n",
+      "uploading file size: 0.562 MB\n",
       "[==================================================]100%\n",
       "successfully uploaded models/eyewear_frame.obj as eyewear_frame.obj\n"
      ]
@@ -54,7 +54,7 @@
     {
      "data": {
       "text/plain": [
-       "{u'message': u'eyewear_frame.obj uploaded to test@test.com/eyewear_frame.obj'}"
+       "{'message': 'eyewear_frame.obj uploaded to public/eyewear_frame.obj'}"
       ]
      },
      "execution_count": 2,
@@ -78,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://studiobitonti.appspot.com/apps/visualize?name=face_scan.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=face_scan.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -88,14 +88,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=face_scan.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=face_scan.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f4c70d69e50>"
+       "<IPython.lib.display.IFrame at 0x21fb6f45d48>"
       ]
      },
      "metadata": {},
@@ -105,7 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://studiobitonti.appspot.com/apps/visualize?name=support.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=support.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -115,14 +115,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=support.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=support.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f4c70d69050>"
+       "<IPython.lib.display.IFrame at 0x21fb67d0c88>"
       ]
      },
      "metadata": {},
@@ -132,7 +132,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://studiobitonti.appspot.com/apps/visualize?name=eyewear_frame.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=eyewear_frame.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -142,14 +142,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=eyewear_frame.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=eyewear_frame.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f4c70d69e50>"
+       "<IPython.lib.display.IFrame at 0x21fb69671c8>"
       ]
      },
      "metadata": {},
@@ -158,7 +158,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=eyewear_frame.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=eyewear_frame.obj&t=Space0ut!'"
       ]
      },
      "execution_count": 3,
@@ -174,16 +174,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"target\": \"face_scan.obj\", \"filename\": \"project_area.obj\", \"range\": [[0.225, 0.275], [0, 1]], \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"height\": 20, \"resolution\": [40, 20], \"center\": [0, 0, 12]}')\n",
-      "('response: ', u'[\"project_area.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=project_area.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "request:  {\"target\": \"face_scan.obj\", \"center\": [0, 0, 12], \"resolution\": [40, 20], \"range\": [[0.225, 0.275], [0, 1]], \"height\": 20, \"filename\": \"project_area.obj\", \"t\": \"Space0ut!\"}\n",
+      "response:  [\"project_area.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=project_area.obj,face_scan.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -193,14 +193,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=project_area.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=project_area.obj,face_scan.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f4c70d86c10>"
+       "<IPython.lib.display.IFrame at 0x21fb6fd9ac8>"
       ]
      },
      "metadata": {},
@@ -209,10 +209,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=project_area.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=project_area.obj,face_scan.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,16 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"target\": \"face_scan.obj\", \"filename\": \"support_projected.obj\", \"project_object\": \"support.obj\", \"range\": [[0.225, 0.275], [0, 1]], \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"project_height\": 2, \"height\": 20, \"resolution\": [40, 20], \"center\": [0, 0, 12]}')\n",
-      "('response: ', u'[\"support_projected.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=support_projected.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "request:  {\"target\": \"face_scan.obj\", \"center\": [0, 0, 12], \"resolution\": [40, 20], \"range\": [[0.225, 0.275], [0, 1]], \"height\": 20, \"filename\": \"support_projected.obj\", \"t\": \"Space0ut!\", \"project_object\": \"support.obj\", \"project_height\": 2}\n",
+      "response:  [\"support_projected.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=support_projected.obj,face_scan.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -254,14 +254,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=support_projected.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=support_projected.obj,face_scan.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f4c70d57d90>"
+       "<IPython.lib.display.IFrame at 0x21fb6f39d88>"
       ]
      },
      "metadata": {},
@@ -270,10 +270,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=support_projected.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=support_projected.obj,face_scan.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
     "    project_height = 2\n",
     ")\n",
     "\n",
-    "genysis.visualize(\"support_projected.obj\",t,True)"
+    "genysis.visualize([\"support_projected.obj\",\"face_scan.obj\"],t,True)"
    ]
   },
   {
@@ -304,9 +304,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"input2\": \"support_projected.obj\", \"engine\": \"carve\", \"input1\": \"eyewear_frame.obj\", \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"output\": \"eyewear_final.obj\", \"operation\": \"union\"}')\n",
-      "('response: ', u'[\"eyewear_final.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=eyewear_final.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "request:  {\"input1\": \"eyewear_frame.obj\", \"input2\": \"face_scan.obj\", \"operation\": \"difference\", \"output\": \"eyewear_frame.obj\", \"t\": \"Space0ut!\", \"engine\": \"carve\"}\n",
+      "response:  {\"output\":\"eyewear_frame.obj\"}\n",
+      "\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=eyewear_final.obj,face_scan.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -316,14 +317,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=eyewear_final.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=eyewear_final.obj,face_scan.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f4c70d57b10>"
+       "<IPython.lib.display.IFrame at 0x21fb6f39d88>"
       ]
      },
      "metadata": {},
@@ -332,10 +333,68 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=eyewear_final.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=eyewear_final.obj,face_scan.obj&t=Space0ut!'"
       ]
      },
      "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# subtract the projected support with the original face part of eyewear frame \n",
+    "genysis.boolean(\n",
+    "    'eyewear_frame.obj',\n",
+    "    'face_scan.obj',\n",
+    "    'eyewear_frame.obj',\n",
+    "    'difference',\n",
+    "    t\n",
+    ")\n",
+    "genysis.visualize([\"eyewear_final.obj\",\"face_scan.obj\"],t,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "request:  {\"input1\": \"eyewear_frame.obj\", \"input2\": \"support_projected.obj\", \"operation\": \"union\", \"output\": \"eyewear_final.obj\", \"t\": \"Space0ut!\", \"engine\": \"carve\"}\n",
+      "response:  {\"output\":\"eyewear_final.obj\"}\n",
+      "\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=eyewear_final.obj&t=Space0ut!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"600\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=eyewear_final.obj&t=Space0ut!\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x21fb693e8c8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://studiobitonti.appspot.com/apps/visualize?name=eyewear_final.obj&t=Space0ut!'"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,21 +425,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
