--- a/9_Conformal_Lattice_midsole_example.ipynb
+++ b/9_Conformal_Lattice_midsole_example.ipynb
@@ -28,7 +28,7 @@
    ],
    "source": [
     "import genysis\n",
-    "t = \"REPLACE_WITH_YOUR_TOKEN\" # replace with your valid token"
+    "t = \"Space0ut!\" # replace with your valid token"
    ]
   },
   {
@@ -55,16 +55,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('uploading file size:', 0.093, 'MB')\n",
+      "uploading file size: 0.094 MB\n",
       "[==================================================]100%\n",
       "successfully uploaded models/midsole_t.stp as midsole_t.stp\n",
-      "('uploading file size:', 0.093, 'MB')\n",
+      "uploading file size: 0.094 MB\n",
       "[==================================================]100%\n",
       "successfully uploaded models/midsole_b.stp as midsole_b.stp\n",
-      "('uploading file size:', 0.166, 'MB')\n",
+      "uploading file size: 0.168 MB\n",
       "[==================================================]100%\n",
       "successfully uploaded models/midsole_s1.stp as midsole_s1.stp\n",
-      "('uploading file size:', 0.171, 'MB')\n",
+      "uploading file size: 0.173 MB\n",
       "[==================================================]100%\n",
       "successfully uploaded models/midsole_s2.stp as midsole_s2.stp\n"
      ]
@@ -72,7 +72,7 @@
     {
      "data": {
       "text/plain": [
-       "{u'message': u'midsole_s2.stp uploaded to test@test.com/midsole_s2.stp'}"
+       "{'message': 'midsole_s2.stp uploaded to public/midsole_s2.stp'}"
       ]
      },
      "execution_count": 2,
@@ -97,9 +97,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"bottom\": \"midsole_b.stp\", \"top\": \"midsole_t.stp\", \"filename\": \"midsole_grid.json\", \"u\": 30, \"t\": \"REPLACE_WITH_YOUR_TOKEN\", \"w\": 5, \"v\": 8, \"output\": \"midsole_grid.json\", \"side2\": \"midsole_s2.stp\", \"side1\": \"midsole_s1.stp\"}')\n",
-      "('response: ', u'[\"midsole_grid.json\"]\\n')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=midsole_grid.json&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"u\": 30, \"v\": 8, \"w\": 5, \"top\": \"midsole_t.stp\", \"bottom\": \"midsole_b.stp\", \"side1\": \"midsole_s1.stp\", \"side2\": \"midsole_s2.stp\", \"filename\": \"midsole_grid.json\", \"merges\": [], \"t\": \"Space0ut!\", \"output\": \"midsole_grid.json\"}\n",
+      "response:  [\"midsole_grid.json\"]\n",
+      "\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=midsole_grid.json&t=Space0ut!\n"
      ]
     },
     {
@@ -109,14 +110,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=midsole_grid.json&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=midsole_grid.json&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f3ea04cd8d0>"
+       "<IPython.lib.display.IFrame at 0x2cf16de2408>"
       ]
      },
      "metadata": {},
@@ -125,7 +126,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=midsole_grid.json&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=midsole_grid.json&t=Space0ut!'"
       ]
      },
      "execution_count": 3,
@@ -155,9 +156,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"case\": 2, \"cBendIn\": 0, \"chamfer\": 0, \"bendIn\": 0.1, \"centerChamfer\": 0, \"filename\": \"cell_0.obj\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\", \"connectPt\": 0}')\n",
-      "('response: ', u'[\"cell_0.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"case\": 2, \"chamfer\": 0, \"centerChamfer\": 0, \"bendIn\": 0.1, \"cBendIn\": 0, \"connectPt\": 0, \"filename\": \"cell_0.obj\", \"t\": \"Space0ut!\"}\n",
+      "response:  [\"cell_0.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -167,14 +168,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=cell_0.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f3ea045dd10>"
+       "<IPython.lib.display.IFrame at 0x2cf167a04c8>"
       ]
      },
      "metadata": {},
@@ -184,9 +185,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"case\": 2, \"cBendIn\": 0, \"chamfer\": 0, \"bendIn\": 1, \"centerChamfer\": 0, \"filename\": \"cell_1.obj\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\", \"connectPt\": 0}')\n",
-      "('response: ', u'[\"cell_1.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=cell_1.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"case\": 2, \"chamfer\": 0, \"centerChamfer\": 0, \"bendIn\": 1, \"cBendIn\": 0, \"connectPt\": 0, \"filename\": \"cell_1.obj\", \"t\": \"Space0ut!\"}\n",
+      "response:  [\"cell_1.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=cell_1.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -196,14 +197,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=cell_1.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=cell_1.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f3ea04cd210>"
+       "<IPython.lib.display.IFrame at 0x2cf167a04c8>"
       ]
      },
      "metadata": {},
@@ -212,7 +213,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=cell_1.obj&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=cell_1.obj&t=Space0ut!'"
       ]
      },
      "execution_count": 4,
@@ -241,9 +242,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"EPSILON\": 0.1, \"component\": \"cell_0.obj\", \"filename\": \"conformalLattice_0.obj\", \"blendTargets\": [], \"boxes\": \"midsole_grid.json\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\"}')\n",
-      "('response: ', u'[\"conformalLattice_0.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_0.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"boxes\": \"midsole_grid.json\", \"component\": \"cell_0.obj\", \"filename\": \"conformalLattice_0.obj\", \"t\": \"Space0ut!\", \"blendTargets\": [], \"EPSILON\": 0.1}\n",
+      "response:  [\"conformalLattice_0.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_0.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -253,14 +254,14 @@
        "        <iframe\n",
        "            width=\"500\"\n",
        "            height=\"500\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_0.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_0.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f3ea04b5f10>"
+       "<IPython.lib.display.IFrame at 0x2cf16db4788>"
       ]
      },
      "metadata": {},
@@ -269,7 +270,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_0.obj&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_0.obj&t=Space0ut!'"
       ]
      },
      "execution_count": 5,
@@ -287,16 +288,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"EPSILON\": 0.1, \"component\": \"cell_0.obj\", \"filename\": \"conformalLattice_1.obj\", \"blendTargets\": [{\"attractor\": {\"range\": 80, \"point\": [0, 0, 0]}, \"component\": \"cell_1.obj\"}], \"boxes\": \"midsole_grid.json\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\"}')\n",
-      "('response: ', u'[\"conformalLattice_1.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_1.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"boxes\": \"midsole_grid.json\", \"component\": \"cell_0.obj\", \"filename\": \"conformalLattice_1.obj\", \"t\": \"Space0ut!\", \"blendTargets\": [{\"component\": \"cell_1.obj\", \"attractor\": {\"point\": [0, 0, 0], \"range\": 80}}], \"EPSILON\": 0.1}\n",
+      "response:  [\"conformalLattice_1.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_1.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -306,14 +307,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_1.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_1.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f3ea04cd110>"
+       "<IPython.lib.display.IFrame at 0x2cf16ddd988>"
       ]
      },
      "metadata": {},
@@ -322,10 +323,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_1.obj&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_1.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,16 +343,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"EPSILON\": 0.1, \"component\": \"cell_0.obj\", \"filename\": \"conformalLattice_2.obj\", \"blendTargets\": [{\"attractor\": {\"range\": 200, \"plane\": [0, 1, 0, -100]}, \"component\": \"cell_1.obj\"}], \"boxes\": \"midsole_grid.json\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\"}')\n",
-      "('response: ', u'[\"conformalLattice_2.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_2.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"boxes\": \"midsole_grid.json\", \"component\": \"cell_0.obj\", \"filename\": \"conformalLattice_2.obj\", \"t\": \"Space0ut!\", \"blendTargets\": [{\"component\": \"cell_1.obj\", \"attractor\": {\"plane\": [0, 1, 0, -100], \"range\": 200}}], \"EPSILON\": 0.1}\n",
+      "response:  [\"conformalLattice_2.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_2.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -361,14 +362,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_2.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_2.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f3ea045df50>"
+       "<IPython.lib.display.IFrame at 0x2cf16e46f88>"
       ]
      },
      "metadata": {},
@@ -377,10 +378,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_2.obj&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_2.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,16 +398,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"EPSILON\": 0.1, \"component\": \"cell_0.obj\", \"filename\": \"conformalLattice_3.obj\", \"blendTargets\": [{\"attractor\": {\"range\": 30, \"curve\": [[20, -200, 0], [-20, 0, 0], [20, 100, 0], [0, 150, 0]]}, \"component\": \"cell_1.obj\"}], \"boxes\": \"midsole_grid.json\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\"}')\n",
-      "('response: ', u'[\"conformalLattice_3.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_3.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"boxes\": \"midsole_grid.json\", \"component\": \"cell_0.obj\", \"filename\": \"conformalLattice_3.obj\", \"t\": \"Space0ut!\", \"blendTargets\": [{\"component\": \"cell_1.obj\", \"attractor\": {\"curve\": [[20, -200, 0], [-20, 0, 0], [20, 100, 0], [0, 150, 0]], \"range\": 30}}], \"EPSILON\": 0.1}\n",
+      "response:  [\"conformalLattice_3.obj\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_3.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -416,14 +417,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_3.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_3.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f3ea045d810>"
+       "<IPython.lib.display.IFrame at 0x2cf167287c8>"
       ]
      },
      "metadata": {},
@@ -432,10 +433,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_3.obj&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=conformalLattice_3.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,16 +453,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"memberThickness\": 1, \"lines\": \"conformalLattice_3.obj\", \"filename\": \"Marching_Cube_Example.stl\", \"t\": \"REPLACE_WITH_YOUR_TOKEN\", \"preview\": true, \"resolution\": 200}')\n",
-      "('response: ', u'[\"Marching_Cube_Example.stl\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=Marching_Cube_Example.stl&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"lines\": \"conformalLattice_3.obj\", \"resolution\": 200, \"memberThickness\": 1, \"filename\": \"Marching_Cube_Example.stl\", \"t\": \"Space0ut!\", \"preview\": true}\n",
+      "response:  [\"Marching_Cube_Example.stl\"]\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=Marching_Cube_Example.stl&t=Space0ut!\n"
      ]
     },
     {
@@ -471,14 +472,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=Marching_Cube_Example.stl&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=Marching_Cube_Example.stl&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f3ea04cd250>"
+       "<IPython.lib.display.IFrame at 0x2cf16dd59c8>"
       ]
      },
      "metadata": {},
@@ -487,10 +488,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=Marching_Cube_Example.stl&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=Marching_Cube_Example.stl&t=Space0ut!'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,21 +520,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
