--- a/12_Surface_Roughness.ipynb
+++ b/12_Surface_Roughness.ipynb
@@ -31,7 +31,7 @@
    ],
    "source": [
     "import genysis\n",
-    "token = \"REPLACE_WITH_YOUR_TOKEN\""
+    "token = \"Space0ut!\""
    ]
   },
   {
@@ -43,10 +43,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('uploading file size:', 0.091, 'MB')\n",
+      "uploading file size: 0.091 MB\n",
       "[==================================================]100%\n",
       "successfully uploaded models/shape.obj as shape.obj\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=shape.obj&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=shape.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -56,14 +56,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=shape.obj&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=shape.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f768873d510>"
+       "<IPython.lib.display.IFrame at 0x2c5765863c8>"
       ]
      },
      "metadata": {},
@@ -72,7 +72,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=shape.obj&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=shape.obj&t=Space0ut!'"
       ]
      },
      "execution_count": 2,
@@ -87,16 +87,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"input\": \"shape.obj\", \"roughness_size\": 2, \"radius\": 1.5, \"t\": \"REPLACE_WITH_YOUR_TOKEN\", \"output\": \"surface_roughness.stl\"}')\n",
-      "('response: ', u'[\"surface_roughness.stl\"]\\n')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=surface_roughness.stl&t=REPLACE_WITH_YOUR_TOKEN\n"
+      "request:  {\"input\": \"shape.obj\", \"output\": \"surface_roughness.stl\", \"roughness_size\": 2, \"radius\": 1.5, \"t\": \"Space0ut!\"}\n",
+      "response:  [\"surface_roughness.stl\"]\n",
+      "\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=surface_roughness.stl&t=Space0ut!\n"
      ]
     },
     {
@@ -106,14 +107,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface_roughness.stl&t=REPLACE_WITH_YOUR_TOKEN\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surface_roughness.stl&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f76884c6110>"
+       "<IPython.lib.display.IFrame at 0x2c576b42388>"
       ]
      },
      "metadata": {},
@@ -122,10 +123,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=surface_roughness.stl&t=REPLACE_WITH_YOUR_TOKEN'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=surface_roughness.stl&t=Space0ut!'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,21 +161,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
