--- a/13_Use_Cases_conformal_sole_with_merged_cells.ipynb
+++ b/13_Use_Cases_conformal_sole_with_merged_cells.ipynb
@@ -27,7 +27,7 @@
    ],
    "source": [
     "import genysis\n",
-    "token = \"Replace_with_your_token\""
+    "token = \"Space0ut!\""
    ]
   },
   {
@@ -39,9 +39,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "request:  {\"case\": 3, \"chamfer\": 0, \"centerChamfer\": 0, \"bendIn\": 0, \"cBendIn\": 0, \"connectPt\": 0, \"filename\": \"cell_0.obj\", \"t\": \"Replace_with_your_token\"}\n",
+      "request:  {\"case\": 3, \"chamfer\": 0, \"centerChamfer\": 0, \"bendIn\": 0, \"cBendIn\": 0, \"connectPt\": 0, \"filename\": \"cell_0.obj\", \"t\": \"Space0ut!\"}\n",
       "response:  [\"cell_0.obj\"]\n",
-      "request:  {\"case\": 3, \"chamfer\": 1, \"centerChamfer\": 0, \"bendIn\": 0, \"cBendIn\": 0, \"connectPt\": 0, \"filename\": \"cell_1.obj\", \"t\": \"Replace_with_your_token\"}\n",
+      "request:  {\"case\": 3, \"chamfer\": 1, \"centerChamfer\": 0, \"bendIn\": 0, \"cBendIn\": 0, \"connectPt\": 0, \"filename\": \"cell_1.obj\", \"t\": \"Space0ut!\"}\n",
       "response:  [\"cell_1.obj\"]\n",
       "uploading file size: 0.735 MB\n",
       "[==================================================]100%\n",
@@ -60,7 +60,7 @@
     {
      "data": {
       "text/plain": [
-       "{'message': 'soleSide2.igs uploaded to test@test.com/soleSide2.igs'}"
+       "{'message': 'soleSide2.igs uploaded to public/soleSide2.igs'}"
       ]
      },
      "execution_count": 2,
@@ -83,19 +83,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "request:  {\"u\": 40, \"v\": 8, \"w\": 10, \"top\": \"soleTop.igs\", \"bottom\": \"soleBot.igs\", \"side1\": \"soleSide1.igs\", \"side2\": \"soleSide2.igs\", \"filename\": \"soleGrid.json\", \"merges\": [{\"mergeSt\": [29, 2, 5], \"mergeEn\": [39, 2, 5], \"mergeDir\": 2, \"mergeRange\": [0, 2, 1], \"mergeLimit\": 20, \"restrictions\": [true, false, true]}, {\"mergeSt\": [0, 2, 5], \"mergeEn\": [10, 2, 5], \"mergeDir\": 2, \"mergeRange\": [0, 2, 1], \"mergeLimit\": 20, \"restrictions\": [true, false, true]}, {\"mergeSt\": [0, 2, 4], \"mergeEn\": [15, 2, 4], \"mergeDir\": 1, \"mergeRange\": [0, 1, 5], \"mergeLimit\": 20, \"restrictions\": [true, true, false]}], \"t\": \"Replace_with_your_token\", \"output\": \"soleGrid.json\"}\n",
+      "request:  {\"u\": 40, \"v\": 8, \"w\": 10, \"top\": \"soleTop.igs\", \"bottom\": \"soleBot.igs\", \"side1\": \"soleSide1.igs\", \"side2\": \"soleSide2.igs\", \"filename\": \"soleGrid.json\", \"merges\": [{\"mergeSt\": [29, 2, 5], \"mergeEn\": [39, 2, 5], \"mergeDir\": 2, \"mergeRange\": [0, 2, 1], \"mergeLimit\": 20, \"restrictions\": [true, false, true]}, {\"mergeSt\": [0, 2, 5], \"mergeEn\": [10, 2, 5], \"mergeDir\": 2, \"mergeRange\": [0, 2, 1], \"mergeLimit\": 20, \"restrictions\": [true, false, true]}, {\"mergeSt\": [0, 2, 4], \"mergeEn\": [15, 2, 4], \"mergeDir\": 1, \"mergeRange\": [0, 1, 5], \"mergeLimit\": 20, \"restrictions\": [true, true, false]}], \"t\": \"Space0ut!\", \"output\": \"soleGrid.json\"}\n",
       "response:  [\"soleGrid.json\"]\n",
       "\n",
-      "request:  {\"boxes\": \"soleGrid.json\", \"component\": \"cell_0.obj\", \"filename\": \"soleConformalLattice_0.obj\", \"t\": \"Replace_with_your_token\", \"blendTargets\": [], \"EPSILON\": 0.1}\n",
+      "request:  {\"boxes\": \"soleGrid.json\", \"component\": \"cell_0.obj\", \"filename\": \"soleConformalLattice_0.obj\", \"t\": \"Space0ut!\", \"blendTargets\": [], \"EPSILON\": 0.1}\n",
       "response:  [\"soleConformalLattice_0.obj\"]\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=soleConformalLattice_0.obj&t=Replace_with_your_token\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=soleConformalLattice_0.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -105,14 +105,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=soleConformalLattice_0.obj&t=Replace_with_your_token\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=soleConformalLattice_0.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1077eb438>"
+       "<IPython.lib.display.IFrame at 0x2322a775a88>"
       ]
      },
      "metadata": {},
@@ -121,10 +121,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=soleConformalLattice_0.obj&t=Replace_with_your_token'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=soleConformalLattice_0.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,16 +177,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "request:  {\"lines\": \"soleConformalLattice_0.obj\", \"resolution\": 600, \"memberThickness\": 0.6, \"filename\": \"soleLattice.obj\", \"t\": \"Replace_with_your_token\"}\n",
+      "request:  {\"lines\": \"soleConformalLattice_0.obj\", \"resolution\": 600, \"memberThickness\": 0.6, \"filename\": \"soleLattice.obj\", \"t\": \"Space0ut!\"}\n",
       "response:  [\"soleLattice.obj\"]\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=soleLattice.obj&t=Replace_with_your_token\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=soleLattice.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -196,14 +196,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=soleLattice.obj&t=Replace_with_your_token\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=soleLattice.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1077e55f8>"
+       "<IPython.lib.display.IFrame at 0x2322a25c908>"
       ]
      },
      "metadata": {},
@@ -212,10 +212,10 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=soleLattice.obj&t=Replace_with_your_token'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=soleLattice.obj&t=Space0ut!'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
