--- a/6_Use_Cases_surgical_guides.ipynb
+++ b/6_Use_Cases_surgical_guides.ipynb
@@ -28,7 +28,7 @@
    ],
    "source": [
     "import genysis\n",
-    "t = 'eyJhbGciOiJIU.U892JiUy' # replace with your valid token"
+    "t = 'Space0ut!' # replace with your valid token"
    ]
   },
   {
@@ -40,13 +40,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('uploading file size:', 3.081, 'MB')\n",
+      "uploading file size: 3.081 MB\n",
       "[==================================================]100%\n",
       "successfully uploaded models/spine_part.obj as spine_part.obj\n",
-      "('uploading file size:', 0.012, 'MB')\n",
+      "uploading file size: 0.012 MB\n",
       "[===================================================]103%\n",
       "successfully uploaded models/surgical_guide.obj as surgical_guide.obj\n",
-      "('uploading file size:', 0.007, 'MB')\n",
+      "uploading file size: 0.007 MB\n",
       "[====================================================]105%\n",
       "successfully uploaded models/surgical_guide_hole.obj as surgical_guide_hole.obj\n"
      ]
@@ -54,7 +54,7 @@
     {
      "data": {
       "text/plain": [
-       "{u'message': u'surgical_guide_hole.obj uploaded to test@test.com/surgical_guide_hole.obj'}"
+       "{'message': 'surgical_guide_hole.obj uploaded to public/surgical_guide_hole.obj'}"
       ]
      },
      "execution_count": 2,
@@ -78,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://studiobitonti.appspot.com/apps/visualize?name=spine_part.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=spine_part.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -88,14 +88,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=spine_part.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=spine_part.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fec68379d10>"
+       "<IPython.lib.display.IFrame at 0x22cb93d86c8>"
       ]
      },
      "metadata": {},
@@ -105,7 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -115,14 +115,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fec68379090>"
+       "<IPython.lib.display.IFrame at 0x22cb93d8f88>"
       ]
      },
      "metadata": {},
@@ -132,7 +132,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide_hole.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide_hole.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -142,14 +142,14 @@
        "        <iframe\n",
        "            width=\"300\"\n",
        "            height=\"300\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide_hole.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide_hole.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fec68379d10>"
+       "<IPython.lib.display.IFrame at 0x22cb93d86c8>"
       ]
      },
      "metadata": {},
@@ -158,7 +158,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide_hole.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide_hole.obj&t=Space0ut!'"
       ]
      },
      "execution_count": 3,
@@ -182,9 +182,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"input2\": \"spine_part.obj\", \"engine\": \"carve\", \"input1\": \"surgical_guide.obj\", \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"output\": \"surgical_guide_midStep.obj\", \"operation\": \"difference\"}')\n",
-      "('response: ', u'[\"surgical_guide_midStep.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide_midStep.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "request:  {\"input1\": \"surgical_guide.obj\", \"input2\": \"spine_part.obj\", \"operation\": \"difference\", \"output\": \"surgical_guide_midStep.obj\", \"t\": \"Space0ut!\", \"engine\": \"carve\"}\n",
+      "response:  {\"output\":\"surgical_guide_midStep.obj\"}\n",
+      "\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide_midStep.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -194,14 +195,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide_midStep.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide_midStep.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fec68367ad0>"
+       "<IPython.lib.display.IFrame at 0x22cb9aece08>"
       ]
      },
      "metadata": {},
@@ -210,7 +211,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide_midStep.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide_midStep.obj&t=Space0ut!'"
       ]
      },
      "execution_count": 4,
@@ -240,9 +241,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('request: ', '{\"input2\": \"surgical_guide_hole.obj\", \"engine\": \"carve\", \"input1\": \"surgical_guide_midStep.obj\", \"t\": \"eyJhbGciOiJIU.U892JiUy\", \"output\": \"surgical_guide_final.obj\", \"operation\": \"difference\"}')\n",
-      "('response: ', u'[\"surgical_guide_final.obj\"]')\n",
-      "https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide_final.obj&t=eyJhbGciOiJIU.U892JiUy\n"
+      "request:  {\"input1\": \"surgical_guide_midStep.obj\", \"input2\": \"surgical_guide_hole.obj\", \"operation\": \"difference\", \"output\": \"surgical_guide_final.obj\", \"t\": \"Space0ut!\", \"engine\": \"carve\"}\n",
+      "response:  {\"output\":\"surgical_guide_final.obj\"}\n",
+      "\n",
+      "https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide_final.obj&t=Space0ut!\n"
      ]
     },
     {
@@ -252,14 +254,14 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide_final.obj&t=eyJhbGciOiJIU.U892JiUy\"\n",
+       "            src=\"https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide_final.obj&t=Space0ut!\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fec68379890>"
+       "<IPython.lib.display.IFrame at 0x22cb9aece08>"
       ]
      },
      "metadata": {},
@@ -268,7 +270,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide_final.obj&t=eyJhbGciOiJIU.U892JiUy'"
+       "'https://studiobitonti.appspot.com/apps/visualize?name=surgical_guide_final.obj&t=Space0ut!'"
       ]
      },
      "execution_count": 5,
@@ -302,21 +304,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
